rust/mynewt/src/hw/sensor/bindings.rs

impl sensor_accel_data {
    #[inline]
    pub fn sad_x_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sad_x_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sad_y_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sad_y_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sad_z_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sad_z_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        sad_x_is_valid: u8,
        sad_y_is_valid: u8,
        sad_z_is_valid: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let sad_x_is_valid: u8 = unsafe { ::core::mem::transmute(sad_x_is_valid) };
            sad_x_is_valid as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let sad_y_is_valid: u8 = unsafe { ::core::mem::transmute(sad_y_is_valid) };
            sad_y_is_valid as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let sad_z_is_valid: u8 = unsafe { ::core::mem::transmute(sad_z_is_valid) };
            sad_z_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_mag_data {
    pub smd_x: f32,
    pub smd_y: f32,
    pub smd_z: f32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_mag_data {
    #[inline]
    pub fn smd_x_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_smd_x_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn smd_y_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_smd_y_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn smd_z_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_smd_z_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        smd_x_is_valid: u8,
        smd_y_is_valid: u8,
        smd_z_is_valid: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let smd_x_is_valid: u8 = unsafe { ::core::mem::transmute(smd_x_is_valid) };
            smd_x_is_valid as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let smd_y_is_valid: u8 = unsafe { ::core::mem::transmute(smd_y_is_valid) };
            smd_y_is_valid as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let smd_z_is_valid: u8 = unsafe { ::core::mem::transmute(smd_z_is_valid) };
            smd_z_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_light_data {
    pub sld_full: u16,
    pub sld_ir: u16,
    pub sld_lux: u32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_light_data {
    #[inline]
    pub fn sld_full_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sld_full_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sld_ir_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sld_ir_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sld_lux_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sld_lux_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        sld_full_is_valid: u8,
        sld_ir_is_valid: u8,
        sld_lux_is_valid: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let sld_full_is_valid: u8 = unsafe { ::core::mem::transmute(sld_full_is_valid) };
            sld_full_is_valid as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let sld_ir_is_valid: u8 = unsafe { ::core::mem::transmute(sld_ir_is_valid) };
            sld_ir_is_valid as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let sld_lux_is_valid: u8 = unsafe { ::core::mem::transmute(sld_lux_is_valid) };
            sld_lux_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_quat_data {
    pub sqd_x: f32,
    pub sqd_y: f32,
    pub sqd_z: f32,
    pub sqd_w: f32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_quat_data {
    #[inline]
    pub fn sqd_x_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sqd_x_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sqd_y_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sqd_y_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sqd_z_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sqd_z_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sqd_w_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(3usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sqd_w_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(3usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        sqd_x_is_valid: u8,
        sqd_y_is_valid: u8,
        sqd_z_is_valid: u8,
        sqd_w_is_valid: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let sqd_x_is_valid: u8 = unsafe { ::core::mem::transmute(sqd_x_is_valid) };
            sqd_x_is_valid as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let sqd_y_is_valid: u8 = unsafe { ::core::mem::transmute(sqd_y_is_valid) };
            sqd_y_is_valid as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let sqd_z_is_valid: u8 = unsafe { ::core::mem::transmute(sqd_z_is_valid) };
            sqd_z_is_valid as u64
        });
        __bindgen_bitfield_unit.set(3usize, 1u8, {
            let sqd_w_is_valid: u8 = unsafe { ::core::mem::transmute(sqd_w_is_valid) };
            sqd_w_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_euler_data {
    pub sed_h: f32,
    pub sed_r: f32,
    pub sed_p: f32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_euler_data {
    #[inline]
    pub fn sed_h_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sed_h_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sed_r_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sed_r_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn sed_p_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_sed_p_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        sed_h_is_valid: u8,
        sed_r_is_valid: u8,
        sed_p_is_valid: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let sed_h_is_valid: u8 = unsafe { ::core::mem::transmute(sed_h_is_valid) };
            sed_h_is_valid as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let sed_r_is_valid: u8 = unsafe { ::core::mem::transmute(sed_r_is_valid) };
            sed_r_is_valid as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let sed_p_is_valid: u8 = unsafe { ::core::mem::transmute(sed_p_is_valid) };
            sed_p_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_color_data {
    pub scd_r: u16,
    pub scd_g: u16,
    pub scd_b: u16,
    pub scd_c: u16,
    pub scd_lux: u16,
    pub scd_colortemp: u16,
    pub scd_saturation: u16,
    pub scd_saturation75: u16,
    pub scd_is_sat: u8,
    pub scd_cratio: f32,
    pub scd_maxlux: u16,
    pub scd_ir: u16,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 2usize], u8>,
}
